--- a/App Zendesk Packages/Dev/Telegram/requirements_channel_app/translations/en.json
+++ b/App Zendesk Packages/Dev/Telegram/requirements_channel_app/translations/en.json
@@ -1,6 +1,6 @@
 {
   "app": {
-    "package": "telegram_channel_bot",
+    "package": "telegram_channel_bot_developer",
     "name": {
       "value": "Telegram Integration for channel Bot",
       "title": "Telegram Channel Bot"
