--- a/App Zendesk Packages/Dev/Telegram/requirements_channel_app/translations/en.json
+++ b/App Zendesk Packages/Dev/Telegram/requirements_channel_app/translations/en.json
@@ -2,8 +2,8 @@
   "app": {
     "package": "telegram_channel_bot_developer",
     "name": {
-      "value": "Telegram Integration for channel Bot",
-      "title": "Telegram Channel Bot"
+      "value": "Telegram Integration for channel Bot Developer",
+      "title": "Telegram Channel Bot Developer"
     }
   }
 }
